# Bibliotec

./: Application.hs  Bibliotec.cabal  Foundation.hs  Main.hs  README.md  Usuario.hs  client_session_key.aes  routes
curl/: PSQL  curl  inserts
src/: Aluguel.hs  Autor.hs  Categoria.hs  Editora.hs  Funcs.hs  Imagem.hs  Livro.hs  Login.hs  Usuario.hs
