name:               Bibliotec
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          Bibliotec
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    
                    Funcs
                    Usuario
                    Autor
                    Categoria
                    Editora
                    Login
                    Imagem

  ghc-options:      -Wall -fwarn-tabs -O2
  
  hs-source-dirs:   ./
                    src

  extensions:       GeneralizedNewtypeDeriving
                    MultiParamTypeClasses
                    FlexibleInstances
                    OverloadedStrings
                    FlexibleContexts
                    TemplateHaskell
                    EmptyDataDecls
                    DeriveGeneric
                    TypeFamilies
                    ViewPatterns
                    QuasiQuotes
                    GADTs

  build-depends:  persistent-postgresql
                , base64-bytestring
                , monad-logger
                , yesod-static
                , shakespeare
                , yesod-core
                , persistent
                , bytestring
                , http-types
                , directory
                , filepath
                , aeson
                , yesod
                , base
                , text
                , time

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
